# NSU-OOP-4SEM-TASK4

./: .gitignore  123.cpp  CMakeLists.txt  GeoWork.cpp  GeoWork.hpp  IO_work.cpp  IO_work.hpp  LogMaking.cpp  LogMaking.hpp  README.md  main.cpp
